create basic page skeleton

--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Library</h1>
-    <div id="books">
-        
+    <div id="dashboard">
+        <h1>Dashboard</h1>
+    </div>
+    <div id="main-page">
+        <h1>Library</h1>
+        <div id="books">
+            <div class="book">
+                <h2>Title</h2>
+                <h2>Author</h2>
+                <h2>Pages</h2>
+                <h2>Was read</h2>
+            </div>
+        </div>
     </div>
 </body>
 <script src="script.js"></script>
