--- a/index.html
+++ b/index.html
@@ -9,16 +9,46 @@
 <body>
     <div id="dashboard">
         <h1>Dashboard</h1>
+
+        <div id="search-for-book">
+            <h2>Search for book</h2>
+            <input type="text" placeholder="Book name or author">
+        </div>
+
+        <div id="add-book">
+            <h2>Add book</h2>
+            <div id="add-book-form">
+                <div id="title-field" class="add-book-field">
+                    <label for="title">Title</label>
+                    <input type="text" name="title" id="title">
+                </div>
+                <div id="author-field" class="add-book-field">
+                    <label for="author">Author</label>
+                    <input type="text" name="author" id="author">
+                </div>
+                <div id="pages-field" class="add-book-field">
+                    <label for="pages">Pages</label>
+                    <input type="number" name="pages" id="pages">
+                </div>
+                <div id="was-read-field">
+                    <label for="was-read">Was read</label>
+                    <input type="checkbox" name="was-read" id="was-read">
+                </div>
+            </div>
+        </div>
+
     </div>
     <div id="main-page">
         <h1>Library</h1>
         <div id="books">
+
             <div class="book">
                 <h2>Title</h2>
                 <h2>Author</h2>
                 <h2>Pages</h2>
                 <h2>Was read</h2>
             </div>
+
         </div>
     </div>
 </body>
