--- a/index.html
+++ b/index.html
@@ -8,45 +8,55 @@
 </head>
 <body>
     <div id="dashboard">
-        <h1>Dashboard</h1>
-
+        <div id="dashboard-logo">
+            <img src="assets/library-logo.svg" alt="">
+            <h1>Dashboard</h1>
+        </div>
         <div id="search-for-book">
-            <h2>Search for book</h2>
+            <div id="search-for-book-logo">
+                <img src="assets/search-book.svg" alt="">
+                <h2>Search for book</h2>
+            </div>
             <input type="text" placeholder="Book name or author">
         </div>
 
         <div id="add-book">
-            <h2>Add book</h2>
+            <div id="add-book-logo">
+                <img src="assets/add-book.svg" alt="">
+                <h2>Add book</h2>
+            </div>
             <div id="add-book-form">
                 <div id="title-field" class="add-book-field">
                     <label for="title">Title</label>
-                    <input type="text" name="title" id="title">
+                    <input type="text" name="title" id="title" placeholder="ex. Pride and Prejudice">
                 </div>
                 <div id="author-field" class="add-book-field">
                     <label for="author">Author</label>
-                    <input type="text" name="author" id="author">
+                    <input type="text" name="author" id="author" placeholder="ex. Jane Austen">
                 </div>
                 <div id="pages-field" class="add-book-field">
                     <label for="pages">Pages</label>
-                    <input type="number" name="pages" id="pages">
+                    <input type="number" name="pages" id="pages" placeholder="ex. 259">
                 </div>
-                <div id="was-read-field">
-                    <label for="was-read">Was read</label>
-                    <input type="checkbox" name="was-read" id="was-read">
+                <div id="was-read-and-submit">
+                    <div id="was-read-field">
+                        <label for="was-read">Was read</label>
+                        <input type="checkbox" name="was-read" id="was-read">
+                    </div>
+                    <button id="add-book-btn">Add Book</button>
                 </div>
             </div>
         </div>
 
     </div>
     <div id="main-page">
-        <h1>Library</h1>
+        <h1>My library</h1>
         <div id="books">
-
             <div class="book">
-                <h2>Title</h2>
-                <h2>Author</h2>
-                <h2>Pages</h2>
-                <h2>Was read</h2>
+                <div class="title-author-pages">
+                    <h2 class="title-and-author">Lord of the rings, by Tolkien</h2>
+                    <h2 class="pages">723 pages</h2>
+                </div>
             </div>
 
         </div>
