wrap form elements in form tag

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <input type="text" placeholder="Book name or author">
         </div>
 
-        <div id="add-book">
+        <form id="add-book">
             <div id="add-book-logo">
                 <img src="assets/add-book.svg" alt="">
                 <h2>Add book</h2>
@@ -43,10 +43,10 @@
                         <label for="was-read">Was read</label>
                         <input type="checkbox" name="was-read" id="was-read">
                     </div>
-                    <button id="add-book-btn">Add Book</button>
+                    <button id="add-book-btn" type="submit">Add Book</button>
                 </div>
             </div>
-        </div>
+        </form>
 
     </div>
     <div id="main-page">
