add styling for read book and not read book

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div id="main-page">
         <h1>My library</h1>
         <div id="books">
-            <div class="book">
+            <div class="book book-read">
                 <div class="title-author-pages">
                     <h2 class="title-and-author">Lord of the rings, by Tolkien</h2>
                     <h3 class="pages">723 pages</h3>
