add textarea for comments in html and style it in css

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                     <label for="pages">Pages</label>
                     <input type="number" name="pages" id="pages" placeholder="ex. 259">
                 </div>
+                <div id="comment-field" class="add-book-field">
+                    <label for="comment">Comment</label>
+                    <textarea type="text" name="comment" id="comment" placeholder="ex. Twas a fine book"></textarea>
+                </div>
                 <div id="was-read-and-submit">
                     <div id="was-read-field">
                         <label for="was-read">Was read</label>
@@ -52,20 +56,7 @@
     <div id="main-page">
         <h1>My library</h1>
         <div id="books">
-            <div class="book book-read">
-                <div class="title-author-pages">
-                    <h2 class="title-and-author">Lord of the rings, by Tolkien</h2>
-                    <h3 class="pages">723 pages</h3>
-                </div>
-                <div class="comments-and-rating">
-                    <p class="comment">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam impedit voluptates sed repudiandae officiis ut culpa! Voluptatem consectetur similique et odio, incidunt eaque molestias exercitationem, esse, quasi culpa mollitia sed omnis nulla tempore adipisci vitae quisquam officia velit perferendis sequi aliquid? Dolores esse, dolor nobis minus voluptatum delectus maxime doloribus!</p>
-                </div>
-                <div class="book-options">
-                    <a href=""><img src="assets/read btn.svg" alt=""></a>
-                    <a href=""><img src="assets/edit.svg" alt=""></a>
-                    <a href=""><img src="assets/delete.svg" alt=""></a>
-                </div>
-            </div>
+            
         </div>
     </div>
 </body>
