add 200 max amount of signs to texarea

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div id="comment-field" class="add-book-field">
                     <label for="comment">Comment</label>
-                    <textarea type="text" name="comment" id="comment" placeholder="ex. Twas a fine book"></textarea>
+                    <textarea maxlength="200" type="text" name="comment" id="comment" placeholder="ex. Twas a fine book"></textarea>
                 </div>
                 <div id="was-read-and-submit">
                     <div id="was-read-field">
