add font and style to "My Library"

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     </div>
     <div id="main-page">
-        <h1>My library</h1>
+        <h1>My Library</h1>
         <div id="books">
             
         </div>
