add max size of author, title and style rest of text content

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <div id="add-book-form">
                 <div id="title-field" class="add-book-field">
                     <label for="title">Title</label>
-                    <input type="text" name="title" id="title" placeholder="ex. Pride and Prejudice">
+                    <input type="text" name="title" id="title" placeholder="ex. Pride and Prejudice" maxlength="30">
                 </div>
                 <div id="author-field" class="add-book-field">
                     <label for="author">Author</label>
-                    <input type="text" name="author" id="author" placeholder="ex. Jane Austen">
+                    <input type="text" name="author" id="author" placeholder="ex. Jane Austen" maxlength="25">
                 </div>
                 <div id="pages-field" class="add-book-field">
                     <label for="pages">Pages</label>
